--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                     <version>3.0.0-M7</version>
                     <configuration>
                         <suiteXmlFiles>
-                            <suiteXmlFile>testNGSuites/testng.xml</suiteXmlFile>
+                            <suiteXmlFile>src/test/resources/suite/testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
                 </plugin>
